# codon_server

./: README.md  build.sh  pyproject.toml  random_nums
codon_bin/: random_nums
src/codon_server/: __init__.py  main.py  random_nums.py
